SFUSA/force-app/main/default/objects/Brand_Country_Region_State_Dist_Alloc__c/fields/Account__c.field-meta.xml
<CustomField>
        <fullName>Account__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>PS-MC-SB-13 to manage Account for which allocations will be provided for this time period</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Brand_Country_Region_State_Dist_Allocs</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </CustomField>