SFUSA/force-app/main/default/objects/Brand_Country_Region_State_Dist_Alloc__c/fields/Distributor_Allocation_Name__c.field-meta.xml
<CustomField>
        <fullName>Distributor_Allocation_Name__c</fullName>
        <formula>Brand_Country_Region_State_Allocation__r.Name &amp; "~" &amp;  Account__r.Name</formula>
        <label>Distributor Allocation Name</label>
        <type>Text</type>
    </CustomField>