SFUSA/force-app/main/default/objects/Brand_Country_Region_State_Dist_Alloc__c/fields/Is_Active__c.field-meta.xml
<CustomField>
        <fullName>Is_Active__c</fullName>
        <defaultValue>true</defaultValue>
        <description>PS-MC-SB-13 to manage if this Brand Country region state Distributor allocation is Active/Inactive</description>
        <label>Is Active</label>
        <type>Checkbox</type>
    </CustomField>