SFUSA/force-app/main/default/objects/Brand_Country_Region_State_Dist_Alloc__c/fields/Remaining_Allocations__c.field-meta.xml
<CustomField>
        <fullName>Remaining_Allocations__c</fullName>
        <description>PS-MC-SB-13 to manage remaining allocations for this time period</description>
        <formula>Allocations_Per_Interval__c - Used_Allocations__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Remaining Allocations</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </CustomField>