SFUSA/force-app/main/default/objects/Brand_Country_Region_State_Dist_Alloc__c/listViews/All.listView-meta.xml
<ListView>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Brand_Country_Region_State_Allocation__c</columns>
        <columns>Account__c</columns>
        <columns>Allocations_Per_Interval__c</columns>
        <columns>Used_Allocations__c</columns>
        <columns>Is_Leaf_Node__c</columns>
        <columns>Is_Active__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Brand_Country_Region_State_Allocation__c</field>
            <operation>contains</operation>
            <value>KC</value>
        </filters>
        <label>All</label>
    </ListView>